--- a/ppart.in
+++ b/ppart.in
@@ -1,7 +1,9 @@
- NPOINTPART TIME ON     IRESETPART(0-no,1-yes)  TOUTPPART
- 10     0.0         1                        0.05
- 1/FROUDE       PART1_DIAM          RHO_PART1/RHO_F RHO_PART2/RHO_F PART1/PART2
- 0.0d0          1.29d-5             1.0d6           1.0d-2          0.5
+ NPOINTPART      IRESETPART     TOUTPPART
+ 10              1              0.05
+ 1/FROUDE        STOKES_NR      RHO/RHO_F   TH_STOKES
+ 0.0d0           0.0029         1.0d6       0.0028
+ TWOWAY          PART_DIAM   
+ 1               1.29d-5     
  LX_IN/XLEN      LY_IN/YLEN         LZ_IN/ZLEN  
  0.20            0.20               0.20 
  LX_OUT/XLEN     LY_OUT/YLEN        LZ_OUT/ZLEN  
